--- a/MLM2PRO-BT-APP/WebApiWindow.xaml
+++ b/MLM2PRO-BT-APP/WebApiWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MLM2PRO_BT_APP"
         mc:Ignorable="d"
-        Title="Set Web Api Token" Height="245" Width="500"
+        Title="Set Web Api Token" Height="270" Width="520"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         TextElement.Foreground="{DynamicResource MaterialDesign.Brush.Foreground}"
         Background="{DynamicResource MaterialDesign.Brush.Background}"
@@ -24,7 +24,10 @@
         <materialDesign:Card VerticalAlignment="Center" Margin="10">
             <StackPanel>
             <Label Grid.Row="0" Margin="10" x:Name="WebAPILabel" Content="Set Web API Token" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="36" />
-            <TextBox Grid.Row="1" Margin="10" x:Name="WebAPITextBox" TextWrapping="Wrap" Text="" VerticalAlignment="Center" />
+            <TextBox Grid.Row="1" Margin="10" x:Name="WebAPITextBox" TextWrapping="Wrap" Text="" VerticalAlignment="Center"                     
+                    materialDesign:HintAssist.Hint="Secret"
+                    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                     />
             <Button Grid.Row="2" Margin="10" Height="40" Width="300" x:Name="WebAPISaveButton" Content="Save" HorizontalAlignment="Center" VerticalAlignment="Center" Click="WebAPISaveButton_Click"/>
             </StackPanel>
         </materialDesign:Card>
