--- a/MLM2PRO-BT-APP/MainWindow.xaml
+++ b/MLM2PRO-BT-APP/MainWindow.xaml
@@ -56,6 +56,8 @@
                 <Button
                   Margin="20,0,20,0"
                   Click="Button_Toggle_DebugConsole"
+                  PreviewMouseDown="Button_DebugConsole_PreviewMouseDown"
+                  PreviewMouseUp="Button_DebugConsole_PreviewMouseUp"
                   Content="Debug Console"
                   ToolTip="Debug Console" />
 
