--- a/MLM2PRO-BT-APP/HomeMenu.xaml
+++ b/MLM2PRO-BT-APP/HomeMenu.xaml
@@ -27,7 +27,7 @@
         <!-- GSPro Section -->
         <materialDesign:Card Grid.Row="0" Grid.Column="0" Margin="5">
             <StackPanel >
-                <Grid Margin="10">
+                <Grid Margin="5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="285" />
                         <ColumnDefinition Width="*" />
@@ -64,18 +64,28 @@
         <!-- Launch Monitor Section -->
         <materialDesign:Card Grid.Row="0" Grid.Column="1" Margin="5">
             <StackPanel>
-                <Grid Margin="10">
+                <Grid Margin="5">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="285" />
+                        <ColumnDefinition Width="280" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="60" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
-                    <TextBlock Text="Launch Monitor" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    <TextBlock Text="{Binding LmBatteryLife, Mode=OneWay}" Background="{Binding LMBattLifeBackground, Mode=OneWay}" FontSize="40"
-                           Grid.Row="0" Grid.Column="1"  VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <TextBlock Grid.Column="0" Text="Launch Monitor" FontSize="38" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <materialDesign:Badged
+                      Grid.Column="1"
+                      Badge="{materialDesign:PackIcon Kind=Battery}"
+                      BadgeBackground="WhiteSmoke"
+                      CornerRadius="5"
+                      HorizontalAlignment="Center"
+                      VerticalAlignment="Center"
+                      Visibility="Visible"
+                     >
+                        <TextBlock materialDesign:BadgedAssist.Badge="Battery"  Text="{Binding LmBatteryLife, Mode=OneWay}" Background="{Binding LMBattLifeBackground, Mode=OneWay}" FontSize="40"
+                           Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    </materialDesign:Badged>
                     <TextBox x:Name="LmStatus" Width="auto" Height="40" 
          Text="{Binding LMStatus, Mode=OneWay}" Background="{Binding LMStatusBackground, Mode=OneWay}" IsHitTestVisible="False" FontSize="20" Grid.ColumnSpan="2"
          Grid.Column="0" Grid.Row="1"/>
@@ -103,7 +113,7 @@
         <!-- Putting Section -->
         <materialDesign:Card Grid.Row="0" Grid.Column="2" Margin="5">
             <StackPanel>
-                <Grid Margin="10">
+                <Grid Margin="5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="285" />
                         <ColumnDefinition Width="*" />
