--- a/MLM2PRO-BT-APP/SettingsPage.xaml
+++ b/MLM2PRO-BT-APP/SettingsPage.xaml
@@ -148,7 +148,7 @@
                         </DockPanel>
                         <DockPanel Margin="10,5,10,5" Grid.Column="3" Grid.Row="0">
                             <TextBlock Text="Putting Port" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                            <TextBox Text="{Binding Settings.Putting.PuttingPort, Mode=TwoWay}" FontSize="14" VerticalAlignment="Center" Width="220" HorizontalAlignment="Right"/>
+                            <TextBox Text="{Binding Settings.Putting.PuttingPort, Mode=OneWay}" IsEnabled="False" FontSize="14" VerticalAlignment="Center" Width="220" HorizontalAlignment="Right"/>
                         </DockPanel>
                         <DockPanel Margin="10,5,10,5" Grid.Column="0" Grid.Row="1">
                             <TextBlock Text="Hide Console Window  " FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
