--- a/MLM2PRO-BT-APP/HomeMenu.xaml
+++ b/MLM2PRO-BT-APP/HomeMenu.xaml
@@ -22,21 +22,20 @@
             <RowDefinition Height="270" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
-        </Grid.RowDefinitions>       
+        </Grid.RowDefinitions>
 
         <!-- GSPro Section -->
         <materialDesign:Card Grid.Row="0" Grid.Column="0" Margin="5">
             <StackPanel >
                 <Grid Margin="5">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="285" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="60" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
-                    <TextBlock Grid.Row="0" Grid.Column="0" Text="GSPro" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <TextBlock Grid.Row="0" Grid.Column="0" Text="Simulator Software" FontSize="40" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,2,0,0"/>
                     <TextBlock Text="{Binding GsProClub, Mode=OneWay}" FontSize="40"
                            Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <TextBox x:Name="GsProStatusBox" Width="auto" Height="40" TextWrapping="Wrap" 
@@ -56,7 +55,7 @@
                     <Button Grid.Row="0" Grid.Column="0" x:Name="GsProConnect" Content="Connect" Padding="50,0,50,0" Margin="0,5,0,5" Click="GSPro_Connect_Click" HorizontalAlignment="Center" Width="190"/>
                     <Button Grid.Row="0" Grid.Column="1" x:Name="GsProDisconnect" Content="Disconnect" Padding="50,0,50,0" Margin="0,5,0,5" Click="GSPro_Disconnect_Click" HorizontalAlignment="Center" Width="190"/>
                     <Button Grid.Row="1" Grid.Column="0" x:Name="GsProTextShot" Content="Send Test Shot" Padding="28,0,28,0" Margin="0,5,0,5" Click="GSPro_Send_TestShot_Click" HorizontalAlignment="Center" Width="190"/>
-                    <Button Grid.Row="1" Grid.Column="1" x:Name="GsProLaunch" Content="Start GSPro" Padding="28,0,28,0" Margin="0,5,0,5" Click="GSPro_Launch_Click" HorizontalAlignment="Center" Width="190"/>
+                    <Button Grid.Row="1" Grid.Column="1" x:Name="GsProLaunch" Content="Start Simulator" Padding="28,0,28,0" Margin="0,5,0,5" Click="GSPro_Launch_Click" HorizontalAlignment="Center" Width="190"/>
                 </Grid>
             </StackPanel>
         </materialDesign:Card>
@@ -195,7 +194,7 @@
         </materialDesign:Card>
 
 
-        
+
     </Grid>
-    
+
 </Page>
